# whisper-lambda

./: .gitattributes  LICENSE  Makefile  README.md
scripts/: pull_models.sh
whisper/: Cargo.toml
whisper/src/: audio.rs  main.rs  models.rs
