[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
hound = "3.5.1"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
whisper-rs = "0.8.0"
serde_json = "1.0.108"
axum = "0.6.20"
base64 = "0.21.5"
log = "0.4.20"
symphonia = { version = "0.5.3" }
tempfile = "3.8.1"
strum = "0.26.1"
strum_macros = "0.26.1"

